# ClearWater-modules

./: .gitignore  README.md  codecov.yml  environment.yml  environment_xsimlab.yml  pyproject.toml
.github/workflows/: tests.yml
deprecated/: test_nsm_phosphorus.py
deprecated_tests/: test_tsm_float.py
dev_sandbox/: xarray_dev.ipynb  xarray_simlab_dev.ipynb
docs/NSMI/: Manual Calculations for Algae.xlsx  Manual Calculations for Alkalinity.xlsx  Manual Calculations for BAlgae.xlsx  (+6 more)
docs_sphinx/: .gitignore  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  overview.rst  requirements.txt
examples/: Implement_TSM_Example.ipynb  model_architecture.ipynb  model_architecture_nsm.ipynb  readme.md
src/: water_quality_functions.py
tests/: conftest.py  test_10_nsm_carbon_calculations.py  test_11_nsm_DOX_calculations.py  test_12_nsm_alkalinity_calculations.py  test_13_nsm_CBOD_calculations.py  test_14_nsm_phosphrous_calculations.py  test_15_nsm_POM_calculations.py  test_16_nsm_N2_calculations.py  test_16_nsm_PX_calculations.py  test_17_nsm_N2_calculations.py  test_1_imports.py  test_2_equation_sort.py  test_3_model.py  test_4_tsm_module.py  test_5_tsm_calculations.py  test_6_nsm_module.py  test_7_nsm_algae_calculations.py  test_8_nsm_balgae_calculations.py  test_9_nsm_nitrogen_calculations.py  test_TSM.py  test_X_nsm_carbon_calculations.py  test_gsm.py  test_tsm.py  test_tsm_float.py
tests_deprecated/: nsm_alkalinity  nsm_balgae.py  nsm_nitrogen.py  nsm_phosphorus.py  test_general_constituents.py  test_general_constituents_old.py  tsm_float.py
(+349 files in other folders)
